added: article 6 and day 5 summary

--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -96,5 +96,22 @@
             </ul>
         </div>
     </div>
+    <div class="day-section">
+        <h3>Day 5:</h3>
+        <p class="topic"><strong>Topic:</strong> Basics of CSS</p>
+        <p class="date"><strong>Date:</strong> 25th January 2026</p>
+        <div class="summary">
+            <strong>Summary:</strong>
+            <p>In this class, we were introduced to the basics of CSS (Cascading Style Sheets). Why its called cascading, how CSS works, and how to apply styles to HTML elements using selectors, properties, and values. We also learned about different ways to include CSS in a webpage, including inline styles, internal stylesheets, and external stylesheets.</p>
+        </div>
+        <div class="articles-list">
+            <strong>Articles:</strong>
+            <ul>
+                <li>Understanding HTMl Tags and Elements (Coming soon)</li>
+                <li>CSS Selectors (Coming soon)</li>
+            </ul>
+        </div>
+    </div>
+    
 </body>
 </html>
