--- a/assignments/week_1/html-resume/index.html
+++ b/assignments/week_1/html-resume/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajat Jaiswal - Resume</title>
     <style>
-        body { font-family: serif; line-height: 1.5; margin: 40px; }
-        hr { border: 0; border-top: 1px solid #ccc; margin: 20px 0; }
-        table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-        table, th, td { border: 1px solid black; padding: 8px; text-align: left; }
+        /* body { font-family: serif; line-height: 1.5; margin: 40px; } */
+        /* hr { border: 0; border-top: 1px solid #ccc; margin: 20px 0; } */
+        /* table { width: 100%; border-collapse: collapse; margin-top: 10px; } */
+        table, th, td { border: 1px solid black; text-align: left; }
         section { margin-bottom: 30px; }
         h1, h2, h3 { margin-bottom: 5px; }
     </style>
