feat: new article

--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -65,7 +65,7 @@
             <strong>Articles:</strong>
             <ul>
                 <li><a href="https://networkbasic101.hashnode.dev/tcp-vs-udp" target="_blank">TCP vs UDP</a></li>
-                <li>TCP 3-way Handshake (Coming soon)</li>
+                <li><a href="https://networkbasic101.hashnode.dev/how-tcp-works" target="_blank">TCP 3-way Handshake</a></li>
             </ul>
         </div>
     </div>
@@ -91,8 +91,8 @@
         <div class="articles-list">
             <strong>Articles:</strong>
             <ul>
-                <li>Emmet for HTML (Coming soon)</li>
-                <li>How Browsers Work (Coming soon)</li>
+                <li><a href="https://html-css-basics.hashnode.dev/emmet-for-html" target="_blank">Emmet for HTML</a></li>
+                <li><a href="https://html-css-basics.hashnode.dev/how-a-browser-works" target="_blank">How Browsers Work</a></li>
             </ul>
         </div>
     </div>
