feat: html tags article

--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -107,7 +107,7 @@
         <div class="articles-list">
             <strong>Articles:</strong>
             <ul>
-                <li>Understanding HTMl Tags and Elements (Coming soon)</li>
+                <li><a href="https://html-css-basics.hashnode.dev/understanding-html-tags-and-elements" target="_blank">Understanding HTML Tags and Elements</a></li>
                 <li>CSS Selectors (Coming soon)</li>
             </ul>
         </div>
