fix: css anchor tag

--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -108,7 +108,7 @@
             <strong>Articles:</strong>
             <ul>
                 <li><a href="https://html-css-basics.hashnode.dev/understanding-html-tags-and-elements" target="_blank">Understanding HTML Tags and Elements</a></li>
-                <li><a href="https://html-css-basics.hashnode.dev/css-selectors-101" target="_blank"></a>CSS Selectors</a></li>
+                <li><a href="https://html-css-basics.hashnode.dev/css-selectors-101" target="_blank">CSS Selectors</a></li>
             </ul>
         </div>
     </div>
