feat: user count and day 6

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="mailto:rajat.jas@gmail.com">
             <img src="https://img.shields.io/badge/-rajat.jas@gmail.com-c0392b?style=flat&labelColor=c0392b&logo=gmail&logoColor=pink" alt="Email">
         </a>
+        <img src="https://hits.sh/github.com/rajat1793/WebDevCohort2026.svg?label=Visitors&color=0366d6&labelColor=24292e" alt="Visitor Count">
     </div>
 
     <nav class="nav-links">
@@ -56,19 +57,20 @@
     <section id="labs">
         <h2 class="stylefont">Labs</h2>
         <ul>
-            <li><h4><a href="https://labs.chaicode.com/html" target="_blank">HTML Lab</a></h4></li>
-            <li><h4><a href="https://labs.chaicode.com/css" target="_blank">CSS Lab</a></h4></li>
-            <li><h4><a href="https://labs.chaicode.com/js" target="_blank">JavaScript Lab</a></h4></li>
+            <li><h3><a href="https://labs.chaicode.com/html" target="_blank">HTML Lab</a></h3></li>
+            <li><h3><a href="https://labs.chaicode.com/css" target="_blank">CSS Lab</a></h3></li>
+            <li><h3><a href="https://labs.chaicode.com/js" target="_blank">JavaScript Lab</a></h3></li>
         </ul>
     </section>
 
     <section id="tech-stack">
         <h2 class="stylefont">Tech Stack</h2>
         <ul>
-            <li><a href="https://git-scm.com/" target="_blank">Git</a> – versioning</li>
-            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">HTML5</a> – structuring</li>
-            <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS3</a> – modular css</li>
+            <li><h3><a href="https://git-scm.com/" target="_blank">Git</a></h3> – versioning</li>
+            <li><h3><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">HTML5</a></h3> – structuring</li>
+            <li><h3><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">CSS3</a></h3> – modular css</li>
         </ul>
     </section>
 </body>
 </html>
+
