--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -72,7 +72,7 @@
 
     <div class="day-section">
         <h3>Day 3:</h3>
-        <p class="topic"><strong>Topic:</strong> Github continued</p>
+        <p class="topic"><strong>Topic:</strong> Github continued (T class)</p>
         <p class="date"><strong>Date:</strong> 22nd January 2026</p>
         <div class="summary">
             <strong>Summary:</strong>
@@ -112,6 +112,26 @@
             </ul>
         </div>
     </div>
-    
+    <div class="day-section">
+        <h3>Day 6:</h3>
+        <p class="topic"><strong>Topic:</strong> CSS Continued (T Class)</p>
+        <p class="date"><strong>Date:</strong> 29th January 2026</p>
+        <div class="summary">
+            <strong>Summary:</strong>
+            <p>In this class, we continued our learning of CSS. We learned about the box model(context-box, border-box), display properties, pseudo-class selector, positioning, and layout techniques using Grid. We also learned about responsive design principles and how to create webpages that adapt to different screen sizes and devices.</p>
+        </div>
+    </div>
+    <div class="day-section">
+        <h3>Day 7:</h3>
+        <p class="topic"><strong>Topic:</strong> CSS Flexbox</p>
+        <p class="date"><strong>Date:</strong> 31st January 2026</p>
+        <div class="summary">
+            <strong>Summary:</strong>
+            <p>In this class, we learned about CSS Flexbox techniques. We learned how to use Flexbox to create flexible and responsive layouts, We also learned about best practices for using Flexbox and Grid in web design. Flex is always used on the parent container to align the child elements.
+                main axis - left to right
+                cross axis - top to bottom</p>
+        </div>
+    </div>
+
 </body>
 </html>
