--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><h3><a href="./articles/index.html">Articles</a></h3></li>
             <li><h3><a href="./assignments/index.html">Assignments</a></h3></li>
             <li><h3><a href="./class_summary/index.html">Class Summary</a></h3></li>
+            <li><h3><a href="./live_class_code/index.html">Live Class Code</a></h3></li>
             <li><h3><a href="./projects/index.html">Projects</a></h3></li>
         </ul>
     </section>
