feat: class summary

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -21,6 +21,14 @@
         <a href="./week_1/html-resume/index.html" class="assignment-link">📝 HTML Resume</a>
     </div>
 
+    <div class="week-section">
+        <h2>📅 Week 2</h2>
+        <h3>HTML & CSS Basics</h3>
+        <p>Learning the basics of HTML structure, semantic elements, and document creation by applying CSS styles.</p>
+        <a href="./week_2/cursor-homepage/index.html" class="assignment-link">📝 Cursor Homepage Clone</a>
+        <a href="./week_2/mintlify-homepage/index.html" class="assignment-link">📝 Mintlify Homepage Clone</a>
+    </div>
+
     <div class="content">
         <h2>🚧 More Weeks Coming Soon</h2>
         <p>Additional assignments will be added as the course progresses. Check back regularly for updates!</p>
