--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -132,6 +132,18 @@
                 cross axis - top to bottom</p>
         </div>
     </div>
+    <div class="day-section">
+        <h3>Day 8:</h3>
+        <p class="topic"><strong>Topic:</strong> CSS Grid</p>
+        <p class="date"><strong>Date:</strong> 1st February 2026</p>
+        <div class="summary">
+            <strong>Summary:</strong>
+            <p>In this class, we learned about CSS Grid techniques. 
+                We learned how to use Grid to create flexible and responsive layouts, including defining rows and columns, placing items, and using grid areas. We also discussed best practices for using Grid alongside Flexbox in web design.
+            </p>
+            <p>Also looked into Tailwind CSS and its utility-first approach to styling, tailwind is mobile first design.</p>
+        </div>
+    </div>
 
 </body>
 </html>
