--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             <li><h3><a href="https://labs.chaicode.com/html" target="_blank">HTML Lab</a></h3></li>
             <li><h3><a href="https://labs.chaicode.com/css" target="_blank">CSS Lab</a></h3></li>
             <li><h3><a href="https://labs.chaicode.com/js" target="_blank">JavaScript Lab</a></h3></li>
+            <li><h3><a href="https://flexbox.chaicode.com/" target="_blank">Flexbox Practice</a></h3></li>
+            <li><h3><a href="https://grid.chaicode.com/" target="_blank">Grid Practice</a></h3></li>
         </ul>
     </section>
 
