--- a/assignments/week_1/html-resume/index.html
+++ b/assignments/week_1/html-resume/index.html
@@ -107,8 +107,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p><strong>Email:</strong> rajat.jas@gmail.com</p>
-        <p><strong>Phone:</strong> +91-9590971664</p>
+        <p><strong>Email:</strong> rxxxx.xxs@gmail.com</p>
+        <p><strong>Phone:</strong> +91-9xxxxxxxx4</p>
         <p><strong>Location:</strong> Bangalore, India</p>
     </section>
     <hr>
