--- a/live_class_code/1feb/index.html
+++ b/live_class_code/1feb/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 8</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Day 8: CSS Grid</h1>
+    <div id="parent">
+        <div class="child child-1">1</div>
+        <div class="child child-2">2</div>
+        <div class="child child-3">3</div>
+        <div class="child child-4">4</div>
+        <div class="child child-5">5</div>
+        <div class="child child-6">6</div>
+        <div class="child child-7">7</div>
+        <div class="child child-8">8</div>
+    </div>
 </body>
 </html>
