--- a/assignments/week_2/mintlify_homepage/index.html
+++ b/assignments/week_2/mintlify_homepage/index.html
@@ -40,7 +40,7 @@
         <section class="hero">
             <div class="hero-badge">
                 <span>NEW</span>
-                <p>Self-updating docs with agent suggestions</p>
+                <p>Self-updating docs with agent suggestions <img class="hero-badge-img" src="./assets/asset 76_light.svg"></p>
             </div>
             <h1>The Intelligent Knowledge Platform</h1>
             <p class="hero-subtitle">
@@ -59,12 +59,12 @@
         <section class="logo-section">
             <div class="logo-grid">
                 <img src="./assets/anthropic.svg" alt="Anthropic" />
-                <img src="./assets/coinbase.svg" alt="Coinbase" class="logo-md" />
-                <img src="./assets/microsoft.svg" alt="Microsoft" class="logo-md" />
-                <img src="./assets/perplexity.svg" alt="Perplexity" class="logo-dark" />
+                <img src="./assets/coinbase.svg" alt="Coinbase" width="120px"/>
+                <img src="./assets/microsoft.svg" alt="Microsoft" width="120px"/>
+                <img src="./assets/perplexity.svg" alt="Perplexity" style="filter: brightness(0)"/>
                 <img src="./assets/hubspot.svg" alt="HubSpot" />
-                <img src="./assets/x.svg" alt="X (Twitter)" class="logo-dark" />
-                <img src="./assets/paypal.svg" alt="PayPal" class="logo-md" />
+                <img src="./assets/x.svg" alt="X (Twitter)" style="filter: brightness(0)"/>
+                <img src="./assets/paypal.svg" alt="PayPal" width="120px"/>
                 <img src="./assets/lovable.svg" alt="Lovable" />
             </div>
         </section>
@@ -126,6 +126,7 @@
 
             <div class="enterprise-cards">
                 <div class="enterprise-item">
+                    <img src="./assets/3dots.svg" class="enterprise-svg">
                     <h2>Build with Partnership</h2>
                     <p>
                         Direct, white-glove access to our documentation experts.<br />
@@ -134,6 +135,7 @@
                     </p>
                 </div>
                 <div class="enterprise-item">
+                    <img src="./assets/key.svg" class="enterprise-svg"/>
                     <h2>Compliance and access control</h2>
                     <p>
                         Compliant with SOC 2, and in the process for ISO/27001 and
@@ -150,7 +152,7 @@
                     See how Anthropic accelerates <br />
                     AI developments with Mintlify
                 </h2>
-                <p>Read Story <span class="arrow-down">></span></p>
+                <p>Read Story <span><img src="./assets/asset 16.svg" class="read-arrow"></span></p>
                 <div class="feature-banner-text">
                     <div class="card">
                         <h1>2M+</h1>
@@ -167,7 +169,7 @@
             </div>
             <div class="enterprise-logos">
                 <img src="./assets/anthropic.svg" alt="Anthropic" />
-                <img src="./assets/coinbase.svg" alt="Coinbase" class="logo-md" />
+                <img src="./assets/coinbase.svg" alt="Coinbase" width = "120px"/>
                 <img src="./assets/hubspot.svg" alt="HubSpot" />
                 <img src="./assets/zaiper.svg" alt="Zapier" />
                 <img src="./assets/atandt.svg" alt="AT&T" />
@@ -196,7 +198,7 @@
                             developer experience that matches the pace of its product
                             development
                         </p>
-                        <button>Read Story <span class="arrow-down">></span></button>
+                        <button>Read Story <span><img src="./assets/asset 16.svg" class="read-arrow"></span></button>
                     </div>
                     <div class="carousel-card">
                         <div class="image-container bg-x">
@@ -207,7 +209,7 @@
                             developer experience that matches the pace of its product
                             development
                         </p>
-                        <button>Read Story <span class="arrow-down">></span></button>
+                        <button>Read Story <span><img src="./assets/asset 16.svg" class="read-arrow"></span></button>
                     </div>
                     <div class="carousel-card">
                         <div class="image-container bg-kalshi">
@@ -218,7 +220,7 @@
                             developer experience that matches the pace of its product
                             development
                         </p>
-                        <button>Read Story <span class="arrow-down">></span></button>
+                        <button>Read Story <span><img src="./assets/asset 16.svg" class="read-arrow"></span></button>
                     </div>
                     <div class="carousel-card">
                         <div class="image-container bg-togetherai">
@@ -227,15 +229,15 @@
                         <p>
                             How Together AI scaled their documentation into a developer experience that mirrors their own ethos
                         </p>
-                        <button>Read Story <span class="arrow-down">></span></button>
+                        <button>Read Story <span><img src="./assets/asset 16.svg" class="read-arrow"></span></button>
                     </div>
                 </div>
                 <div class="carousel-button">
                     <button>
-                        <img src="./assets/right-left-circular.svg" alt="" class="rotate-180" />
+                        <img src="./assets/asset 75.svg"/>
                     </button>
                     <button>
-                        <img src="./assets/right-left-circular.svg" alt="" />
+                        <img src="./assets/asset 76.svg"/>
                     </button>
                 </div>
             </div>
@@ -259,11 +261,13 @@
 
             <div class="cta-card-wrapper">
                 <div class="cta-card">
+                    <img src="./assets/asset 18.svg" alt="Pricing icon" />
                     <h2>Pricing on your terms</h2>
                     <p>Pick the plan that works best for you</p>
                     <a href="#">Pricing details <span class="arrow-down">></span></a>
                 </div>
                 <div class="cta-card">
+                    <img src="./assets/asset 78.svg" alt="Start building icon" />
                     <h2>Start building</h2>
                     <p>Deploy your documentation in minutes</p>
                     <a href="#">Quickstart <span class="arrow-down">></span></a>
