--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -111,6 +111,12 @@
                 <li><a href="https://html-css-basics.hashnode.dev/css-selectors-101" target="_blank">CSS Selectors</a></li>
             </ul>
         </div>
+        <div class="articles-list">
+            <strong>Assignment:</strong>
+            <ul>
+                <li><a href="https://rajat1793.github.io/WebDevCohort2026/assignments/week_1/html-resume/index.html" target="_blank">HTML Resume</a></li>
+            </ul>
+        </div>
     </div>
     <div class="day-section">
         <h3>Day 6:</h3>
@@ -143,7 +149,14 @@
             </p>
             <p>Also looked into Tailwind CSS and its utility-first approach to styling, tailwind is mobile first design.</p>
         </div>
+        <div class="articles-list">
+            <strong>Assignment:</strong>
+            <ul>
+                <li><a href="https://rajat1793.github.io/WebDevCohort2026/assignments/week_2/mintlify_homepage/index.html" target="_blank">Mintlify Clone</a></li>
+                <li><a href="https://rajat1793.github.io/WebDevCohort2026/assignments/week_2/cursor_homepage/index.html" target="_blank">Cursor Clone</a></li>
+            </ul>
+        </div>
     </div>
-
+    
 </body>
 </html>
