--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -157,6 +157,16 @@
             </ul>
         </div>
     </div>
+    <div class="day-section">
+        <h3>Day 9:</h3>
+        <p class="topic"><strong>Topic:</strong> Tailwind Basics</p>
+        <p class="date"><strong>Date:</strong> 5th February 2026</p>
+        <div class="summary">
+            <strong>Summary:</strong>
+            <p>In this class, we continued our learning of Tailwind CSS. We learned about configuring Tailwind, customizing the default theme, and using plugins to extend Tailwind's functionality. We also learnedIn this class, we learned about Tailwind CSS techniques and its utility-first approach to styling. We learned how to use Tailwind CSS to rapidly build responsive and visually appealing web pages using pre-defined utility classes. We also discussed best practices for using Tailwind CSS in web design.
+            </p>
+        </div>
+    </div>
     
 </body>
 </html>
