--- a/assignments/week_2/mintlify_homepage/index.html
+++ b/assignments/week_2/mintlify_homepage/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./assets/mintlify-icon.svg" type="image/x-icon">
     <title>Mintlify - The Intelligent Knowledge Platform</title>
 </head>
 
@@ -407,7 +408,7 @@
                 <div class="theme-toggle">
                     <button>
                         <svg viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg"
-                            class="shrink-0 select-none size-3 text-muted transition-colors duration-[250ms] ease-[ease]"
+                            class="shrink-0 select-none size-3 text-muted transition-colors duration-250 ease-[ease]"
                             aria-hidden="true" width="19" height="18">
                             <g clip-path="url(#clip0_11851_40123)">
                                 <path
@@ -427,7 +428,7 @@
 
                     <button>
                         <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
-                            class="shrink-0 select-none size-3 transition-colors duration-[250ms] ease-[ease] text-text-main"
+                            class="shrink-0 select-none size-3 transition-colors duration-250 ease-[ease] text-text-main"
                             aria-hidden="true">
                             <path
                                 d="M9 3C9.414 3 9.75 2.664 9.75 2.25V1.25C9.75 0.836 9.414 0.5 9 0.5C8.586 0.5 8.25 0.836 8.25 1.25V2.25C8.25 2.664 8.586 3 9 3Z"
@@ -461,7 +462,7 @@
 
                     <button>
                         <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"
-                            class="shrink-0 select-none size-3 text-muted transition-colors duration-[250ms] ease-[ease] translate-x-px translate-y-px"
+                            class="shrink-0 select-none size-3 text-muted transition-colors duration-250 ease-[ease] translate-x-px translate-y-px"
                             aria-hidden="true">
                             <path
                                 d="M15.705 9.22299C15.459 9.03999 15.126 9.02599 14.867 9.18599C13.999 9.71799 13.008 9.99899 12 9.99899C8.967 9.99899 6.5 7.53199 6.5 4.49899C6.5 3.35299 6.854 2.25199 7.523 1.31299C7.7 1.06399 7.709 0.731993 7.544 0.473993C7.38 0.215993 7.077 0.0879926 6.774 0.139993C2.994 0.846993 0.25 4.15199 0.25 7.99999C0.25 12.411 3.839 16 8.25 16C11.888 16 15.069 13.539 15.985 10.014C16.062 9.71799 15.951 9.40499 15.705 9.22299Z"
