--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -159,7 +159,7 @@
     </div>
     <div class="day-section">
         <h3>Day 9:</h3>
-        <p class="topic"><strong>Topic:</strong> Tailwind Basics</p>
+        <p class="topic"><strong>Topic:</strong> Tailwind CSS Continued (T Class)</p>
         <p class="date"><strong>Date:</strong> 5th February 2026</p>
         <div class="summary">
             <strong>Summary:</strong>
@@ -203,6 +203,30 @@
             </p>
         </div>
     </div>
-    
+    <div class="day-section">
+        <h3>Day 12:</h3>
+        <p class="topic"><strong>Topic:</strong> JavaScript Refresher (T Class)</p>
+        <p class="date"><strong>Date:</strong> 12th February 2026</p>
+        <div class="summary">
+            <strong>Summary:</strong>
+            <p>    In this class, we had a refresher on JavaScript basics.
+                <ul>
+                    <li>Specs</li>
+                    <li>How to read manuals</li>
+                    <li>Javascript Compatibility in different browsers</li>
+                    <li>Hello world</li>
+                    <li>Code structure </li>
+                    <li>Strict mode </li>
+                    <li>Variables </li>
+                    <li>Data types </li>
+                    <li>Type conversion</li>
+                    <li>Operators</li>
+                    <li>Conditional statements</li>
+                    <li>Loops</li>
+                    <li>Functions</li>
+                </ul>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
