--- a/class_summary/index.html
+++ b/class_summary/index.html
@@ -228,5 +228,23 @@
             </p>
         </div>
     </div>
+    <div class="day-section">
+        <h3>Day 13:</h3>
+        <p class="topic"><strong>Topic:</strong> JavaScript Essentials</p>
+        <p class="date"><strong>Date:</strong> 14th February 2026</p>
+        <div class="summary">
+            <strong>Summary:</strong>
+            <p> In this class, we covered some essential JavaScript concepts related to datatypes, console, number, string and there methods, arrays and their methods, objects and their methods, and some important concepts like NaN, Infinity, EPSILON, null and undefined.
+            </p>
+        </div>
+        <div class="articles-list">
+            <strong>Pointers:</strong>
+            <ul>
+                <li>How many primitive data types are there in JavaScript?</li>
+                <li>What is EPSILON in JavaScript?</li>
+                <li>What is the difference between null and undefined in Memory?</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
