--- a/live_class_code/index.html
+++ b/live_class_code/index.html
@@ -22,6 +22,13 @@
         <a href="./31jan/index.html" class="assignment-link">📝 CSS Flexbox Example</a>
     </div>
 
+    <div class="week-section">
+        <h2>14th February 2026</h2>
+        <h3>JavaScript Essentials</h3>
+        <p>Introduction to JavaScript basics, including variables, data types, operators, and control structures.</p>
+        <a href="./14feb/index.html" class="assignment-link">📝 JavaScript Essentials Example</a>
+    </div>
+
     <div class="content">
         <h2>🚧 More Weeks Coming Soon</h2>
         <p>Additional live class code will be added as the course progresses. Check back regularly for updates!</p>
